Fix docker-compose for s390x and update readme
Signed-off-by: AnthonyAmanse <ghieamanse@gmail.com>

--- a/containers/blockchain/s390x.md
+++ b/containers/blockchain/s390x.md
@@ -2,39 +2,41 @@
 
 Assumes you `ssh` into LinuxOne instance
 
-1. ./s390x-prereq.sh
+1. `./s390x-prereq.sh`
 2. Log out then log back in
-3. source ./s390x-env.sh
-4. ./s390x-deployment.sh
+3. `source ./s390x-env.sh`
+4. `./s390x-deployment.sh`
 
 # generate certs and build images
 
-1. ./generate-certs.sh
-2. ./docker-images.sh
+1. `./generate-certs.sh`
+2. `./docker-images.sh`
 
 Then deploy containers via docker-compose
 
-1. docker-compose -p "fitcoin" up -d redis-server shop-ca fitcoin-ca
+1. `docker-compose -p "fitcoin" up -d redis-server shop-ca fitcoin-ca`
 
 Wait for them to run
 
-2. docker-compose -p "fitcoin" up -d couchdb0 couchdb1
+2. `docker-compose -p "fitcoin" up -d couchdb0 couchdb1`
 
 Wait for them to run
 
-3. docker-compose -p "fitcoin" up -d rabbitmq orderer0
+3. `docker-compose -p "fitcoin" up -d rabbitmq`
 
 Wait for them to run
 
-4. docker exec rabbitmq1 /bin/sh -c "rabbitmqctl set_policy ha-all '.' \"{'ha-mode':'all','ha-sync-mode':'automatic'}\""
+4. `docker exec rabbitmq1 /bin/sh -c "rabbitmqctl set_policy ha-all '.' \"{'ha-mode':'all','ha-sync-mode':'automatic'}\""`
+
+then check if rabbitmq2 or rabbitmq3 are running `docker ps -a`. Do `docker start` if they exited
 
 Wait for them to run
 
-5. docker-compose -p "fitcoin" up -d shop-peer fitcoin-peer
+5. `docker-compose -p "fitcoin" up -d orderer0 shop-peer fitcoin-peer`
 
 Wait for them to run
 
-6. docker-compose -p "fitcoin" up -d blockchain-setup
+6. `docker-compose -p "fitcoin" up -d blockchain-setup`
 
 Do `docker logs blockchain-setup -f` to follow the logs  
 Wait for it to:
@@ -52,4 +54,5 @@ Successfully instantiated chaincode on all peers.
 ```
 
 
-7. docker-compose -p "fitcoin" up -d shop-backend fitcoin-backend
+7. docker-compose -p "fitcoin" up -d shop-backend fitcoin-backend rabbit-client
+8. docker-compose -p "fitcoin" up -d rabbit-client
